Details
-
Bug
-
Resolution: Fixed
-
Major
-
VirtualBox 4.3.20 on Windows 8.1
VM Configuration:
Memory 512, Video Mem 32, default setting as Windows XP
Description
I am wanting to install a software on ReactOS a Bengali typing solution on Windows aka Avro Keyboard and getting a AddFontResource failed error. It appears when the installer wanting to install a font. There is a similar bug on Jira & I used a recently Daily Build iso. Revision 66069. If I ignore the errors the the installer wants to install locale(Bangla) but the ime things are not implemented on ReactOS so the BSOD appear on regular builds but on Debug build the OS hang. The Debug log are attached.
Avro Keyboard - https://www.omicronlab.com/avro-keyboard.html
Sorry for bad English
Thanks