[GDI32][WIN32K:NTGDI] - Correctly handle relative paths passed to AddFontResource*. - Fix the user->kernel interface between GdiAddFontResourceW and NtGdiAddFontResourceW Patch by Víctor Martínez Calvo. CORE-9079

svn path=/trunk/; revision=67353